# Satoshi_Gateway

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  config.json
.github/workflows/: docker-publish.yml
src/: bitcoin.c  bitcoin.h  config.c  config.h  main.c  p2p.c  p2p.h  sha256.c  sha256.h  stratum.c  stratum.h  utils.c  utils.h  web.c  web.h  zmq_listener.c  zmq_listener.h
web/: index.html
